    - Replaced WARN_IF_OLD_PACKLIST, DOC_INSTALL and UNINSTALL
      one-liners with ExtUtils::Command::MM functions
    - Replaced VMS hand-rolled perl code for TOUCH, CHMOD, RM_F and RM_RF
      with ExtUtils::Command functions.  Added TEST_F.
    - Added $(EXISTS_EXT) macro and init_EXISTS_EXT to avoid
      hardcoding /.exists.  Reduces code duplication in the MM_* modules.

6.05 Tue Aug 27 16:09:51 PDT 2002
    - Output format of the hint file verbose diagnostic is now in
      a format native to the OS, so it broke a test on non-Unixen.

6.04 Mon Aug 26 18:31:11 PDT 2002 
    - Little fix for pre-5.8 Cygwin test to get the shared library names 
      right.
    * disttest on Win9X broken because of forgotten tabs
    * WriteMakefile argument verification should now be accurate
    - Documented the LD flag.
    * Documented prompt()
    * vendor install was not adding to packlist or updating perllocal.
    - Supporting $Config{vendorarchexp} and $Config{vendorlibexp}.
    - Fixed conflict on VMS between logical names and directories 
      (bleadperl 17488)
    - Fixed space-vs-tab bug on Netware (bleadperl 17579)
    - Mysterious NetWare fix from Ananth (bleadperl 17376)
    - Support OPTIMIZE in MacOS (bleadperl 17347)
    - Support hints in MacOS (mutation of bleadperl 17347)
    * Default man installation directories were using $(MAN*EXT) to
      generate the directory name.  This turned out to be wrong more
      often than right, so we'll use man1 and man3 hard-coded.
    - Debian folks fixed the doc_install targets so the Appending
      diagnostic gives the correct directory for perllocal.pod
    * Added ExtUtils::MakeMaker::FAQ
    - Quieted some warnings on MacOS (bleadperl 17669)

6.03 Wed Jun 19 17:06:14 EDT 2002
    - Documented that we're clamping down on cargo-cult MakeMaker
      programming.
    - Eased up the parameter verification to leave errant values alone.
    - Doug MacEachern documented LDDLFLAGS and added to known parameters.