@@ -45,6 +45,9 @@
       with ExtUtils::Command functions.  Added TEST_F.
     - Added $(EXISTS_EXT) macro and init_EXISTS_EXT to avoid
       hardcoding /.exists.  Reduces code duplication in the MM_* modules.
+    - Adding clean_subdirs target and clean_subdirs_target() method to
+      generate same.  This allows easier overriding of an unportable part
+      of the clean target.
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
